# Lingofluent

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.env
lingofluent/: __main__.py  logging_config.py
lingofluent/audio/: asr_base.py  crisp_asr.py  crisp_tts.py  tts_base.py  utils.py
lingofluent/bot/telegram/: bot_cmds.py  telegram_bot.py  utils.py
lingofluent/configs/: config.py  system_prompt.md  welcome_message.md
lingofluent/llm/: __init__.py  llama_cpp_llm.py  llm_base.py  llm_factory.py  openai_compat_llm.py  openai_llm.py
lingofluent/memory/: __init__.py  session.py
lingofluent/voice_cloning/: synthetize_voice.py
scripts/: download_models.sh  start_servers.sh
tests/llm/: test_llama_cpp_llm.py  test_llm_base.py  test_openai_compat_llm.py
voices/: README.md  antonio.txt
